--- a/hive.scss
+++ b/hive.scss
@@ -4,13 +4,13 @@
 
 // TODO there is a bug on fluid grid 3 col on margins
 
-$type:  fixed;         /* can be fixed or fluid */
-// $type: fluid;
-$width: 960px;            /* set the desired fixed width in pixels or %  */
+//$type:  fixed;        /* can be fixed or fluid */
+$type: fluid;
+$width: 100%;           /* set the desired fixed width in pixels or %  */
                         /* if you use a percentage, take care to avoid going above 92% to leave some margin */
-$margin_fx: 10px;       /* set the margin between columns, in px for fixed layout %*/
-//$margin_fl: 0.99%;      /* set the margin between columns in % for fluid */
-
+//$margin_fx: 10px;     /* set the margin between columns, in px for fixed layout %*/
+$margin_fl: 0.99%;      /* set the margin between columns in % for fluid */
+$fixed_at: 960px;       /* the width when template became fixed. put 2000px if wants alway fluid */
 
 
 /*
@@ -577,47 +577,103 @@ $unit_16: $width / 16;
 }
 
 
-/* TABLETS LIKE IPAD PORTRAIT */
-@media screen and (max-width: 880px){
-   .hive_12, .hive_16{
-       padding: 10px 0;
-       width: 100% !important;
-       margin: 0;
-   }
-   .cell_12, .cell_11, .cell_10, .cell_9{
-       width: 100% !important;
-       margin: 0;
-   }
-   .cell_8, .cell_7, .cell_6, .cell_5{
-          width: 70% !important;
-          margin: 0;
-          margin-right: 2%;
-    }
-    .cell_4, .cell_3, .cell_2, .cell_1{
-        width: 28% !important;
+
+
+
+/* SETTING FOR SMARTPHONES LANDSCAPE */
+@media screen and (max-width : 680px){
+    body{
+        padding: 0;
         margin: 0;
-        //margin-left: 0.10%;
     }
-    .cell_12, .cell_16{
-        @for $i from 1 through 16 {
-          .cell_#{$i} { width: 100% !important; }
+    .hive_12{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        .cell_16, .cell_15, .cell_14, .cell_13, .cell_12, .cell_11, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1{
+            width: 100%;
+            margin: 0;
         }
+        .cell_10{
+               width: 66.6%;
+         }
+        .cell_2{
+               width: 33.3%;
+         }
+        .cell_9, .cell_13{
+               width: 75%;
+         }
+        .cell_6{
+               width: 50%;
+         }
+        .cell_3{
+               width: 25%;
+         }
+    }
+    .hive_16{
+        .cell_16, .cell_15, .cell_14, .cell_13, .cell_12, .cell_11, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1{
+            width: 100%;
+            margin: 0;
+        }
+        .cell_12{
+            width: 75%;
+        }
+        .cell_10{
+            width: 65%;
+        }
+        .cell_6{
+            width: 35%;
+        }
+        .cell_8, .cell_9, .cell_7{
+               width: 50%;
+         }
+        .cell_4{
+               width: 25%;
+         }
+    }
+    
+    .alpha, .omega{
+        margin: 0;
     }
 }
 
-/* SETTING FOR SMARTPHONES */
-/* portrait and landscape */
-@media screen and (max-width : 620px){
-    .hive_12, .hive_16{
-        padding: 10px 0;
-        width: 100% !important;
+/* SETTING FOR SMARTPHONES PORTRAIT */
+@media screen and (max-width : 420px){
+    body{
+        padding: 0;
         margin: 0;
     }
-    .cell_12, .cell_11, .cell_10, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1{
-        width: 100% !important;
+    
+    .hive_12, .hive_16{
+        padding: 0;
+        width: 100%;
         margin: 0;
+        .cell_16, .cell_15, .cell_14, .cell_13, .cell_12, .cell_10, .cell_11, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1{
+            width: 100%;
+            margin: 0;
+        }
     }
     .alpha, .omega{
         margin: 0;
     }
 }
+
+
+/* REGULAR CLASSIC DESKTOP 960px */
+@media screen and (min-width: 960px) {
+    .hive_12, .hive_16{
+        max-width: 960px;
+        margin: auto;
+    }
+}
+
+/* WIDE DESKTOP OR TV */
+@media screen and (min-width: 1500px) {
+    .hive_12, .hive_16{
+        max-width: 80%;
+        margin: auto;
+    }
+}
+
+
+
