--- a/demo_files/demo.css
+++ b/demo_files/demo.css
@@ -5,11 +5,22 @@ pre { background: #000; color: #fff; padding: 15px; }
 
 .the_demo_grid section { display: block; border: 1px solid gray; min-height: 30px; font-family: Arial; font-size: 10px; line-height: 30px; text-align: center; margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.75); }
 
+#nested .wrapper { padding: 10px; border: 1px solid green; }
+#nested .nested_cells { border: 1px solid red; padding: 10px; margin-bottom: 10px; }
+#nested .nested_cells ul { border: 1px solid blue; margin: 0; padding: 2px; }
+#nested .nested_cells ul li > div { border: 1px solid olive; padding: 3px; }
+#nested .left_col, #nested .right_col { border: 1px solid gray; padding: 10px; }
+#nested .left_col section { border: 1px solid orange; padding: 10px; margin-top: 5px; }
+
 h1, h2, p { padding: 4px; }
 
-h1, h2 { letter-spacing: -0.09em; }
+h1, h2 { letter-spacing: -0.09em; margin: 0; }
 
 h1 { font-size: 4.5em; margin: 3px; }
+
+footer { margin-top: 20px; padding: 10px; }
+
+.jumper { line-height: 30px; background-color: orange; text-align: center; font-weight: bold; color: #000; text-shadow: 1px 0px #fff; }
 
 /* SETTING FOR SMARTPHONES PORTRAIT AND LANDSCAPE until the browser is at a maximum of 480 */
 @media only screen and (max-width: 767px) { h1 { font-size: 2em; margin: 3px; } }
