--- a/demo_files/demo.css
+++ b/demo_files/demo.css
@@ -6,11 +6,14 @@ pre { background: #000; color: #fff; padding: 15px; }
 .the_demo_grid section { display: block; border: 1px solid gray; min-height: 30px; font-family: Arial; font-size: 10px; line-height: 30px; text-align: center; margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.75); }
 
 #nested .wrapper { padding: 10px; border: 1px solid green; }
+#nested > div section, #nested > div footer { border: 1px solid gray; margin: 0; padding: 10px; }
 #nested .nested_cells { border: 1px solid red; padding: 10px; margin-bottom: 10px; }
 #nested .nested_cells ul { border: 1px solid blue; margin: 0; padding: 2px; }
 #nested .nested_cells ul li > div { border: 1px solid olive; padding: 3px; }
 #nested .left_col, #nested .right_col { border: 1px solid gray; padding: 10px; }
 #nested .left_col section { border: 1px solid orange; padding: 10px; margin-top: 5px; }
+#nested ul.menu { border: 1px solid blue; margin: 0; padding: 2px; }
+#nested ul.menu li > div { border: 1px solid olive; padding: 3px; }
 
 h1, h2, p { padding: 4px; }
 
