little update to the demo files

--- a/demo_files/demo.css
+++ b/demo_files/demo.css
@@ -3,9 +3,11 @@ body:after { display: block; position: absolute; top: 0; height: 20px; backgroun
 
 pre { background: #000; color: #fff; padding: 15px; }
 
+.downlaod { background-color: rgba(255, 255, 255, 0.7); }
+
 .the_demo_grid section { display: block; border: 1px solid gray; min-height: 30px; font-family: Arial; font-size: 10px; line-height: 30px; text-align: center; margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.75); }
 
-#nested .wrapper { padding: 10px; border: 1px solid green; }
+#nested .wrapper { padding: 10px; border: 1px solid green; background-color: rgba(255, 255, 255, 0.7); }
 #nested > div section, #nested > div footer { border: 1px solid gray; margin: 0; padding: 10px; }
 #nested .nested_cells { border: 1px solid red; padding: 10px; margin-bottom: 10px; }
 #nested .nested_cells ul { border: 1px solid blue; margin: 0; padding: 2px; }
@@ -27,17 +29,13 @@ footer { margin-top: 20px; padding: 10px; }
 
 /* SETTING FOR SMARTPHONES PORTRAIT AND LANDSCAPE until the browser is at a maximum of 480 */
 @media only screen and (max-width: 767px) { h1 { font-size: 2em; margin: 3px; } }
-
 @media only screen and (max-width: 480px) { body:after { background-color: rgba(128, 0, 128, 0.75); content: "this design respond to SMARTPHONES landscape and portrait orientation"; } }
-
 /* SETTING FOR PORTRAIT TABLET until the browser is at a maximum of 1000 */
 @media only screen and (min-width: 481px) and (max-width: 1000px) { body:after { background-color: rgba(0, 128, 0, 0.75); content: "this design respond to TABLETS portrait orientation"; }
   h1 { font-size: 3em; margin: 3px; } }
-
 /* SETTING FOR DESKTOP until the browser is between 1000px and a maximum of 1499 */
 @media only screen and (min-width: 1000px) and (max-width: 1499px) { body:after { background-color: rgba(255, 0, 0, 0.75); content: "this design respond to DESKTOP size"; }
   .hive_12, .hive_16 { max-width: 960px; margin: auto; } }
-
 /* WIDE DESKTOP OR TV */
 @media screen and (min-width: 1500px) { body:after { background-color: rgba(0, 128, 0, 0.75); content: "this design respond to CINEMA DISPLAY size"; }
   .hive_12, .hive_16 { max-width: 80%; margin: auto; } }
