--- a/css/demo_files/demo.css
+++ b/css/demo_files/demo.css
@@ -3,9 +3,11 @@ body:after { display: block; position: absolute; top: 0; height: 20px; backgroun
 
 pre { background: #000; color: #fff; padding: 15px; }
 
+.downlaod { background-color: rgba(255, 255, 255, 0.7); }
+
 .the_demo_grid section { display: block; border: 1px solid gray; min-height: 30px; font-family: Arial; font-size: 10px; line-height: 30px; text-align: center; margin-bottom: 10px; background-color: rgba(255, 255, 255, 0.75); }
 
-#nested .wrapper { padding: 10px; border: 1px solid green; }
+#nested .wrapper { padding: 10px; border: 1px solid green; background-color: rgba(255, 255, 255, 0.7); }
 #nested > div section, #nested > div footer { border: 1px solid gray; margin: 0; padding: 10px; }
 #nested .nested_cells { border: 1px solid red; padding: 10px; margin-bottom: 10px; }
 #nested .nested_cells ul { border: 1px solid blue; margin: 0; padding: 2px; }
