--- a/hive.sass
+++ b/hive.sass
@@ -1,188 +1,122 @@
 /** HIVE SCSS YET ANOTHER RESPONSIVE GRID SYSTEM
  ** Author Matteo Papadopoulos aka @spleenteo on twitter
- ** http://www.basictrading.biz 
- ** thx to @makevoid for sass translation
+ ** http://www.cantierecreativo.net
  **/
 
 // YOU CAN CHANGE SOME SETTINGS IF YOU WISH
-$width: 100%       /* set the desired fixed width in pixels or %  */
+$width:         100%     // % value actually
+$responsive:    1        // will your layout respond to devices and browsers resize? default true
+$cinemaEnabled: 0        // if true it set up the cinema display @media
+$cinemaWidth:   0        // and hive will be at this size (usually 85/90% just to leave some margin)
+$cinemaSize:    1500px   // it only works with sass --pre
 
+// private from here
+$unit: $width / 10
 
-//
-// WARNING: Internal variables, don't change them!
-// these are assumed to modify the margin in fixed layout
-//
-$unit_12: 100% / 12
-$unit_16: 100% / 16
-
-.hive_12, .hive_16 
-  @extend .clearfix
-  width: $width
-  margin-left: (100% - $width)/2
-  margin-right: (100% - $width)/2
-  .cell_1, .cell_2, .cell_3, .cell_4, .cell_5, .cell_6, .cell_7, .cell_8, .cell_9, .cell_10, .cell_11, .cell_12, .cell_13, .cell_14, .cell_15, .cell_16 
-    display: inline
-    float: left
-    position: relative
-  
-
-.hive_12
-  @for $i from 1 through 12 
-    .cell_#{$i}  
-      width: $unit_12 * $i 
-  
-  @for $i from 1 through 12 
-    .pre_#{$i}  
-      padding-left: $unit_12 * $i 
-  
-  @for $i from 1 through 12 
-    .post_#{$i}  
-      padding-right: $unit_12 * $i 
-  
-
-.hive_16
-  @for $i from 1 through 16 
-    .cell_#{$i}  
-      width: $unit_16 * $i 
-  
-  @for $i from 1 through 16 
-    .pre_#{$i}  
-      padding-left: $unit_16 * $i 
-  
-  @for $i from 1 through 16 
-    .post_#{$i}  
-      padding-right: $unit_16 * $i 
-  
-
-
-.alpha 
-  margin-left: 0
-
-.omega 
-  margin-right: 0
-
-.clear 
-  clear: both
+@mixin clearfix()
   display: block
-  overflow: hidden
-  visibility: hidden
-  width: 0
-  height: 0
+  &:after
+    clear: both
+    content: ' '
+    display: block
+    font-size: 0
+    line-height: 0
+    visibility: hidden
+    width: 0
+    height: 0
 
-.clearfix:after 
-  clear: both
-  content: ' '
-  display: block
-  font-size: 0
-  line-height: 0
-  visibility: hidden
-  width: 0
-  height: 0
-
-.clearfix 
-  display: inline-block
-* html.clearfix 
-  height: 1%
-
-.clearfix 
-  display: block
-
-/* FOR SMARTPHONE LANDSCAPE AND TABLET PORTRAIT ONLY */
-@media only screen and (min-width: 401px) and (max-width: 1023px)
-  .hive_12
-    .cell_12, .cell_11, .cell_10, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1
-      width: 100%
-    
-    .cell_10
-      width: $unit_12 * 10
-    
-    .cell_10.pre_2, .cell_10.post_2
-      width: 100%
-    
-    .cell_2
-      width: $unit_12 * 2
-    
-    .cell_2.pre_8, .cell_2.post_8
-      width: 100%
-    
-    .cell_9, .cell_13
-      width: $unit_12 * 9
-    
-    .cell_6
-      width: $unit_12 * 6
-    
-    .cell_3
-      width: $unit_12 * 3
-    
-    .cell_10.pre_2, .cell_10.post_2, .cell_9.pre_3, .cell_9.post_3, .cell_2.pre_8, .cell_2.post_8, .cell_3.pre_9, .cell_3.post_9
-      width: 100%
-    
-    .tryptich
-      @extend .cell_12
-      .cell_4
-        width: 33.33333333%
-
-  
-  .hive_16
-    .cell_16, .cell_15, .cell_14, .cell_13, .cell_12, .cell_11,  .cell_10, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1
-      width: 100%
-    
-    .cell_12
-      width: $unit_16 * 12
-    
-    .cell_10
-      width: $unit_16 * 10
-    
-    .cell_6
-      width: $unit_16 * 6
-    
-    .cell_8, .cell_9, .cell_7
-      width: $unit_16 * 8
-     
-    .cell_4
-      width: $unit_16 * 4
-     
-    .cell_12.pre_4, .cell_12.post_4, .cell_10.pre_6, .cell_10.post_6, .cell_6.pre_10, .cell_6.post_10, .cell_8.pre_8, .cell_8.post_8,  .cell_9.pre_7, .cell_9.post_7, .cell_7.pre_9, .cell_7.post_9
-      width: 100%
-
-  .hive_12, .hive_16
-    @for $i from 1 through 12 
-      .pre_#{$i}  
-        padding-left: 0 
-    
-    @for $i from 1 through 12 
-      .post_#{$i}  
-        padding-right: 0 
-
-
-/* SMARTPHONE PORTRAIT */
-@media only screen and (max-width: 400px)
-  .hive_12, .hive_16
-    padding: 0
-    width: 100%
-    margin: 0
-    .cell_16, .cell_15, .cell_14, .cell_13, .cell_12, .cell_10, .cell_11, .cell_9, .cell_8, .cell_7, .cell_6, .cell_5, .cell_4, .cell_3, .cell_2, .cell_1
-      width: 100%
-      margin: 0
-  
-    @for $i from 1 through 16 
-      .pre_#{$i}  
-        padding-left: 0 
-  
-    @for $i from 1 through 16 
-      .post_#{$i}  
+// SMALLER THAN TABLET LANDSCAPE
+@media only screen and (max-width: 700px)
+  .hive
+    @for $i from 1 through 10
+      .pre_#$i * 10
+        padding-left: 0
+      .post_#$i * 10
         padding-right: 0
 
-/* SETTING FOR PORTRAIT TABLET until the browser is at a maximum of 1000 */
+    .post_25, .pre_25,.post_33, .pre_33,.post_66, .pre_66,.post_75, .pre_75
+      padding: 0 !important
+
+// smaller then 1499 (SMALLER THAN CINEMA DISPLAY)
+// it means almost all modern browser excepts those whom dont't undersand media queries
+@media only screen and (max-width: 5000px)
+  .hive
+    @include clearfix()
+    width: $width
+    margin-left: (100% - $width)/2
+    margin-right: (100% - $width)/2
+    .cell_10, .cell_20, .cell_25, .cell_30, .cell_33, .cell_40, .cell_50, .cell_60, .cell_66, .cell_70, .cell_75, .cell_80, .cell_90, .cell_100
+      display: inline
+      float: left
+      position: relative
+
+    @for $i from 1 through 10
+      .cell_#$i * 10
+        width: $unit * $i
+      .pre_#$i * 10
+        padding-left: $unit * $i
+      .post_#$i * 10
+        padding-right: $unit * $i
+
+      .cell_25
+        width: $width / 4
+      .cell_33
+        width: $width / 3
+      .cell_66
+        width: ($width / 3) * 2
+      .cell_75
+        width: ($width / 4) * 3
+
+      .pre_25
+        padding-left: $width / 4
+      .pre_33
+        padding-left: $width / 3
+      .pre_66
+        padding-left: ($width / 3) * 2
+      .pre_75
+        padding-left: ($width / 4) * 3
+
+      .post_25
+        padding-right: $width / 4
+      .post_33
+        padding-right: $width / 3
+      .post_66
+        padding-right: ($width / 3) * 2
+      .post_75
+        padding-right: ($width / 4) * 3
+
+// SMARTPHONE PORTRAIT
+@media only screen and (max-width: 320px)
+  .hive
+    @for $i from 1 through 10
+      .cell_#$i * 10
+        width: 100%
+
+      .cell_25, .cell_33,.cell_66,.cell_75
+        width: 100%
+
+// TABLET PORTRAIL ONLY
+@media only screen and (max-width: 720px) and (min-width: 321px)
+  .hive
+    @for $i from 1 through 9
+      .cell_#$i * 10
+        width: 50%
+        &.hived
+          width: 100%
+
+// TABLET LANSDSCAPE or DESKTOP ONLY
 @media only screen and (min-width: 1024px) and (max-width: 1499px)
-  .hive_12, .hive_16
+  .hive
     max-width: 960px
     margin: auto
-    
 
-/* WIDE DESKTOP OR TV */
-@media only screen and (min-width: 1500px)
-  .hive_12, .hive_16
-    max-width: 80%
-    margin: auto
-    
+// CINEMA DISPLAY OR WEB TV
+@media only screen and (min-width: $cinemaSize )
+  @if $cinemaEnabled == 1 and $cinemaWidth != 0
+    .hive
+      max-width: $cinemaWidth
+      margin: auto
+  @else
+    .hive
+      max-width: 960px
+      margin: auto
